deployment-definition.yml
apiVersion: apps/v1 # deployment definition file for Kubernetes deployment

kind: Deployment

metadata:
  name: myapp-deployment
  labels:
    app: myapp
    type: front-end

specs:
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        type: front-end

    spec:
      containers:
        - name: nginx-container
          image: nginx

  replicas: 3
  selector:
    matchLabels:
      type: front-end
