event-simulator.yml
apiVersion: v1

kind: Pod

metadata:
  name: event-simulator-pod

spec:
  containers:
    - name: event-simulator
      image: kodekloud/event-simulator

    - name: image-processor
      image: some-image-processor
