kubernetes_IngressController.yml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
  name: nginx-ingress-controller

spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller

      args:
        - /nginx-ingress-controller
      ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
