persistent_Volume_Claim.yml
apiVersion: v1

kind: PersistentVolumeClaim

metadata:
  name: myclaim

spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 500Mi
  persistentVolumeReclaimPolicy: Retain/Delete/Recycle

  -------------------------------------------------------------------


  apiVersion: v1
  kind: Pod
  metadata:
    name: webapp
  spec:
    containers:
      - name: event-simulator
        image: kodekloud/event-simulator
        volumeMounts:
          - mountPath: /log
            name: log-volume

    volumes:
      - name: log-volume
        persistentVolumeClaim:
          claimName: claim-log-1master
