persistent_volume.yaml
apiVersion: v1

kind: PersistentVolume

metadata:
  name: pv-vol1

spec:
  accessModes:
    - ReadWriteOnce
  capacity:
    storage: 1Gi
  hostPath: # this can be replaced with awsElasticBlockStore
    path: /tmp/data # This option should not be used in PROD environment

    --------------------------------------------------------------------------------
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
  - name: event-simulator
    image: kodekloud/event-simulator
    volumeMounts:
    - mountPath: /log
      name: log-volume

  volumes:
  - name: log-volume
    hostPath:
      # directory location on host
      path: /var/log/webapp
      # this field is optional
      type: Directorymaster
