service-definition.yml
apiVersion: v1
kind: Service
metdata:
  name: myapp-service

spec:
  type: NodePort
  ports:
    - targetPort: 80 # port on the POD
      port: 80 # Port on the service
      nodePort: 30008 # port on the Node
      #provide list of labels to identify the pod
  selector:
    app: myapp
    type: front-end



# To create the cluster IP definition

metdata:
  name: backend

spec:
  type: ClusterIP
  ports:
    - targetPort: 80 # port on the POD
      port: 80 # Port on the service is exposed
  selector:
      app: myapp
      type: backend
