webapp-service-definition.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp
  name: webapp-service
spec:
  ports:
  - port: 8080
    nodePort: 30082
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp
  type: NodePort
status:
  loadBalancer: {}
