ingress-resources.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: Ingress-wear

spec:
    # this section specifies where the traffic will be diverted to
  backend:
    serviceName: wear-service
    servicePort: 80

-----------------------------------------------------------------------
#RULES PART
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: Ingress-wear-watch
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
          - path: /wear
            backend:
              serviceName: wear-service
              servicePort: 80
    - host: watch.my-online-store.com
      http:
        paths:
          - path: /watch
            backend:
              serviceName: watch-service
              servicePort: 80
